--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ edition = "2018"
 [dependencies]
 approx = "0.3.2"
 num-traits = "0.2.8"
-alga = "0.9.2"
+alga = "0.9"
 itertools = "0.8"
-nalgebra = "0.18.1"
+nalgebra = "0.18"
 ndarray = "0.13.0"
 num-complex = "0.2.3"
 
 [patch.crates-io]
-alga = { git = "https://github.com/hmunozb/alga", branch = "morphisms" }
-nalgebra = {git = "https://github.com/hmunozb/nalgebra", branch = "dmatrix-vec-space"}
+#alga = { git = "https://github.com/hmunozb/alga", branch = "morphisms" }
+#nalgebra = {git = "https://github.com/hmunozb/nalgebra", branch = "dmatrix-vec-space"}
