--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-approx = "0.3.2"
-num-traits = "0.2.8"
-alga = "0.9"
-itertools = "0.8"
-nalgebra = "0.19"
-ndarray = "0.13"
-num-complex = "0.2"
+approx = "0.5"
+num-traits = "0.2"
+itertools = "0.10"
+nalgebra = { version="0.27", optional=true }
+ndarray = { version="0.15" }
+num-complex = "0.4"
+simba = "0.5"
 
 [patch.crates-io]
 #alga = { git = "https://github.com/hmunozb/alga", branch = "morphisms" }
